feat: LOGIN api added, folder structure, working sidebar, logout button, theme switcher

--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,1 +1,9 @@
-<router-outlet></router-outlet>
+<div class="main-container">
+    <div class="sidebar-container">
+        <app-sidebar></app-sidebar>
+    </div>
+    <div class="content">
+        <app-title></app-title>
+        <router-outlet></router-outlet>
+    </div>
+</div>
